src/routes/LearningRoute/Learn.css
.qHead {
    background-color:  white;
    color: gray ;
    padding: 1.5rem;
    display:flex;
    flex-direction:column;
    justify-content: left;
    align-items:left;
    padding-left:5vw;
    border-bottom:  1px solid lightgray;
}

.scoreCard{
    position:absolute;
    top:150;
    right:5vw;
    /* background-color:red; */
}

.word{
    font-size:40px;
    font-weight:bolder;
}

.formBin {
    background-color: white;
    font-size: 20px;
    font-weight: lighter;
    height: 15vh;
    display:flex;
    flex-direction:column;
    justify-content: center;
    align-items:center;

    
}

.wScore{
    font-size: 20px;    
    background-color: white;
    display: inline-flex;
    color: gray;
    width:100%;
    justify-content:space-between;
    padding:10px;
    padding-left:5vw;
    padding-right: 5vw;
}

.learnForm{
    display:flex;
    flex-direction:row;
    justify-content: center;
    /* align-items:center; */
}

/* input[type=text] {
    background-color: #fefefe;
    color: gray;
    padding-right:10px;
    font-size: 30px;
    font-size: 3.5vw;
    width: 80vw;
    height:8vh;
    border:  2px solid lightgreen

  } */

  .tInput{
    background-color: #fefefe;
    color: gray;
    padding-right:10px;
    font-size: 30px;
    font-size: 3.5vw;
    width: 80vw;
    height:8vh;
    border:  2px solid lightgreen
  }

.tSubmit{
    width:10vw;
    font-weight:9000;
    font-size: 30px;
    font-size: 3.5vw;
    background-color:lightgreen;
    color:white;
    padding:0;
    border:  2px solid lightgreen
}

.incorrect{
    margin-top:10px;
    margin-top:7ch;
    background-color: white;
    color:gray;
    font-size: 20px;
    font-weight: lighter;
    height: 15vh;
    display:flex;
    padding:5vw;
    flex-direction:row;
    justify-content: space-between;
    align-items:center;


}
 .correct{
     margin-top:10px;
     margin-top:7ch;
     background-color: white; 
     color:gray;
     font-size: 20px;
     font-weight: lighter;
     height: 15vh;
     display:flex;
     padding:5vw;
     flex-direction:row;
     justify-content: space-between;
     align-items:center;
 }

 .nButton{
     margin-left: 30px;
     height:15vh;
     width:10vw;
     background-color:lightgreen;
     color:white;
     padding:0;
     border:  2px solid lightgreen;
     font-size: 30px;
    font-size: 3.5vw;
 }

